--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "chardet>=5.2.0",
     "ipykernel>=7.2.0",
     "jinja2>=3.1.6",
     "kaleido>=1.2.0",
